chore: drop usage MethodHandles.Lookup for defining classes